Add GitHub Actions workflow for deploying Flutter Web

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      # Comment out or remove the test step
+      # - name: Run tests
+      #   run: flutter test
+
       - name: Build web release
         run: flutter build web --release
 
