--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,32 @@
-name: Deploy Flutter Web App
+name: Flutter CI
 
 on:
   push:
     branches:
-      - main # Change this to the branch you want to trigger the deploy from
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.24.0' # Specify the Flutter version explicitly
 
       - name: Install dependencies
         run: flutter pub get
 
-      # Comment out or remove the test step
-      # - name: Run tests
-      #   run: flutter test
+      - name: Run tests
+        run: flutter test
 
-      - name: Build web release
+      - name: Build Web
         run: flutter build web --release
 
       - name: Deploy to GitHub Pages
@@ -33,4 +34,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: build/web
-          publish_branch: gh-pages
