--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          git remote add origin https://github.com/kkayaiirem/First-Flutter-Dashboard.git
+          git remote | grep origin || git remote add origin https://github.com/kkayaiirem/First-Flutter-Dashboard.git
           git fetch origin
           git checkout gh-pages || git checkout --orphan gh-pages
           rm -rf *
@@ -35,3 +35,4 @@ jobs:
           git add .
           git commit -m "Deploy to GitHub Pages"
           git push -f origin gh-pages
+      
