Set up GitHub Actions for Flutter deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,14 @@ jobs:
 
       - name: Build Web
         run: flutter build web --release
-
+      
+      - name: Verify Build Directory
+        run: |
+          if [ ! -d "build/web" ]; then
+            echo "Build directory does not exist. Exiting."
+            exit 1
+          fi
+      
       - name: Deploy to GitHub Pages
         run: |
           git config --global user.name 'GitHub Actions'
@@ -35,4 +42,5 @@ jobs:
           git add .
           git commit -m "Deploy to GitHub Pages"
           git push -f origin gh-pages
+      
       
